Thin center headings.

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,10 @@ span.me {
   font-weight: bold;
   white-space: nowrap;
 }
-
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300;
+  text-align: center;
+}
 .publication p {
   cursor: default;
   background-color: #e4f1fe;
