--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 .publication p, .prologue {
   cursor: default;
   background-color: white;
-  /*
-  background-color: #e4f1fe;
-  border-radius: 10px;
-  */
+  position: relative;
   padding: 30px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -45,11 +42,8 @@ h1, h2, h3, h4, h5, h6 {
 .publication p.linger {
   cursor: auto;
 }
-.publication p.linger .more {
-  font-size: 0;
-}
 .publication p .more::before {
-  content: 'more\25B8';
+  content: 'more\25B9';
   padding-right: .2em;
   font-style: italic;
   color: #0275d8;
@@ -58,7 +52,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 .publication p .more:hover::before {
   color: red;
-  text-decoration: underline;
+  content: 'more\25B8';
+}
+.publication p.linger .more::before {
+  content: '\25C3';
+  position: absolute;
+  font-style: normal;
+  right: 3px;
+  bottom: 0;
 }
 .publication p .extra {
   font-size: 0;
@@ -76,7 +77,6 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0;
 }
-
 
 .db-pageheader {
   padding: 1rem 15px;
@@ -197,7 +197,7 @@ simple underlying structure.
 The focus of my research at MIT is therefore to
 find ways to enhance and exploit this structure
 to make deep networks more transparent.</p>
-<p>I also work on programmability as seen as a
+<p>I also work on programmability as a
 broader human-computer interaction problem. I develop
 novice programming interfaces, introductory lessons, open standards,
 and libraries that make computer systems more broadly programmable.
@@ -296,10 +296,11 @@ Numerical Linear Algebra</a> is graduate textbook on numerical linear algebra I 
 </div>
 <script>
 $(document).on('click', '.more, .publication p', function(ev) {
-  if (!$(ev.target).is('.more, .publication p')) {
+  if (!$(ev.target).is('.more, .publication p:not(.linger)')) {
     return;
   }
-  $(this).closest('p').addClass('linger');
+  $(this).closest('p').toggleClass('linger');
+  ev.stopPropagation();
 });
 </script>
 </body>
