--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@ unit as a solution to those problems.
 I have used network dissection to reveal that representation space is
 not isotropic: learned representations have an unusually high agreement
 with human-labeled concepts that vanishes under a change in basis.
-We will be giving an oral presentation about
+We gave an oral presentation about
 the technique and the insights it provides at CVPR 2017.
 </span>
 <a href="http://netdissect.csail.mit.edu/final-network-dissection.pdf"
