Fix some wording and typos.

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <img src="family.jpg" class="selfpic">
 <figcaption>David Bau (center) and family:<br>(clockwise) Heidi, Cody, Piper, and Anthony</figcaption>
 </figure>
-<p>In our quest to invent and improve automation,
+<p>In our quest to improve automation,
 computer scientists must not relinquish humanity's ability to
 program computers. Our reaction to a complex world
 should be to create transparency.</p>
@@ -195,10 +195,10 @@ simple underlying structure.
 The focus of my research at MIT is therefore to
 find ways to enhance and exploit this structure
 to make deep networks more transparent.</p>
-<p>I also work on the wider human-computer interaction problem
-of programmability. I develop
+<p>I also have a long interest on the wider problem of making all
+computer systems more transparent and programmable. I develop
 novice programming interfaces, lessons, standards,
-and libraries that make systems more programmable.
+and libraries that make complex systems easier to understand.
 </div> <!-- prologue -->
 </div>
 </div>
@@ -253,8 +253,8 @@ The review appears in the June 2017 Communications of the ACM; <a href="https://
 <img src="pencilgym.png" class="projpic">
 <a href="https://pencilcode.net">
 Pencil Code</a> is an open-source
-project that bridges the gap between novice programming idioms and
-professional languages.
+project that makes it easier for novice programmers to work with
+professional programming languages.
 <span class="more"></span>
 <span class="extra">Developed together with my son and with the generous
 support of Google, this system provides a blocks-based editing environment
@@ -300,7 +300,7 @@ Apache XML Beans</a> is an open-source implementation of the XML Schema specific
 <a href="https://en.wikipedia.org/wiki/Internet_Explorer_4">
 Microsoft Internet Explorer 4</a> was the first AJAX web browser.
 <span class="more"></span>
-<span class="extra">As part of the <a href="https://en.wikipedia.org/wiki/Trident_(layout_engine)">Trident</a> team led by <a href="https://en.wikipedia.org/wiki/Adam_Bosworth">Adam Bosworth</a>, I helped create the first fully mutable HTML DOM by defining its asynchronous loading model. My contribution was to implement an incremental HTML parser and fast multithreaded preloader for linked resources that was able to co-exist with single-threaded scripts that could change the document.</span>
+<span class="extra">As part of the <a href="https://en.wikipedia.org/wiki/Trident_(layout_engine)">Trident</a> team led by <a href="https://en.wikipedia.org/wiki/Adam_Bosworth">Adam Bosworth</a>, I helped create the first fully mutable HTML DOM by defining its asynchronous loading model. My contribution was to implement an incremental HTML parser that uses speculative lookahead to drive a fast multithreaded preloader for linked resources, while maintaining a consistent view of programmable elements for single-threaded scripts that can change the document during loading.</span>
 The design of the system resolved tensions between performance, flexiblity, and programmability, and contributed to the strength of the modern web platform.</p>
 <input class="collapse" type="checkbox">
 <p>
