Remove clipping from thumbnail.

--- a/src/index.html
+++ b/src/index.html
@@ -234,9 +234,7 @@ B Zhou, A Torralba. <em>Seeing What a GAN Cannot Generate</em>,
 </p>
 <input class="collapse" type="checkbox">
 <p>
-<span class="projpic" style="max-height:156px;overflow:hidden;">
-  <img src="gandissect.gif" class="projpic" style="margin-top:-27px;">
-</span>
+<img src="gandissect.png" class="projpic">
 <a href="http://gandissect.csail.mit.edu/">
 GAN Dissection</a>
 investigates the internals of a GAN, and shows how neurons can be
