Creating transparency in a complex world.

--- a/src/index.html
+++ b/src/index.html
@@ -163,8 +163,8 @@ figcaption {
  <div class="namecard">
  <h1><nobr>David Bau</nobr></h1>
  <p class="lead">
- <nobr>Preserving Programmability</nobr> in a
- <nobr>World of Complexity</nobr>
+ <nobr>Creating Transparency</nobr> in a
+ <nobr>Complex World</nobr>
 <address>
  <a href="https://www.csail.mit.edu/about">
  <nobr>MIT Computer Science</nobr> and
@@ -182,10 +182,16 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <img src="family.jpg" class="selfpic">
 <figcaption>David Bau (center) and family:<br>(clockwise) Heidi, Cody, Piper, and Anthony</figcaption>
 </figure>
-<p>In our quest to improve automation,
-computer scientists must not relinquish humanity's ability to
-program computers. Our reaction to a complex world
-should be to create transparency.</p>
+<p>It is crucial for humans to be able to understand the algorithms
+discovered by machine-learning systems, so we can explain,
+design, and recognize behavior in untested domains.
+<p>Artificial intelligence should create transparency in a complex world.
+As our sophisticated systems exhibit more unexpected and emergent
+behavior, I believe the focus of machine learning should shift to
+<em>machine teaching</em>: the development of methods that reveal
+the patterns and strategies our algorithms have found, so that
+both programmers and users can retain agency.
+</p>
 <p>As a PhD student in <a href="http://web.mit.edu/torralba/www/"
 >Antonio Torralba's lab</a>, I develop techniques that increase
 interpretability
