--- a/src/index.html
+++ b/src/index.html
@@ -184,11 +184,11 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 </figure>
 <p>It is crucial for humans to be able to understand the algorithms
 discovered by machine-learning systems, so we can explain,
-design, and recognize behavior in untested domains.
+design, and control their behavior in new domains.
 <p>Artificial intelligence should create transparency in a complex world.
 As our sophisticated systems exhibit more unexpected and emergent
 behavior, I believe the focus of machine learning should shift to
-<em>machine teaching</em>: the development of methods that reveal
+<em>machine explanation</em>: the development of methods that reveal
 the patterns and strategies our algorithms have found, so that
 both programmers and users can retain agency.
 </p>
@@ -415,7 +415,7 @@ Numerical Linear Algebra</a> is the graduate textbook on numerical linear algebr
         <a href="https://www.linkedin.com/in/david-bau-4b8130/">LinkedIn</a>
         <a href="http://davidbau.com">Personal Blog</a>
         <a href='https://www.google.com/search?safe=off&noj=1&biw=1855&bih=917&q=david+bau+-music+-mp3+-radio+-youtube+-soundcloud+-minnesota+-tennis+-"records"+-"noah+david"+-"extension+educator"+-"bau+mann"+-"bau+man"+-"bau+telle"+-"bau+xi"+-mirador+-atticus&oq=david+bau+-music+-mp3+-radio+-youtube+-soundcloud+-minnesota+-tennis+-"records"+-"noah+david"+-"extension+educator"+-"bau+mann"+-"bau+man"+-"bau+telle"+-"bau+xi"+-mirador+-atticus'>Web</a>
-        <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-D475D&open=object-32">Office: 32-D475-D</a>
+        <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Office: Stata 32-383</a>
         </div>
         </div>
         </div>
