--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@ by creating realistic instances without those objects.
 <a href="http://gandissect.csail.mit.edu/papers/Seeing_What_a_GAN_Cannot_Generate.pdf"
 ><span class="me">D Bau</span>, JY Zhu, J Wulff, W Peebles, H Strobelt,
 B Zhou, A Torralba. <em>Seeing What a GAN Cannot Generate</em>,
-  (Preprint, in submission)</a>.
+  (To appear at ICCV 2019)</a>.
 </p>
 <input class="collapse" type="checkbox">
 <p>
