--- a/src/index.html
+++ b/src/index.html
@@ -182,14 +182,14 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <img src="family.jpg" class="selfpic">
 <figcaption>David Bau (center) and family:<br>(clockwise) Heidi, Cody, Piper, and Anthony</figcaption>
 </figure>
-<p>It is crucial for humans to be able to understand the algorithms
-discovered by machine-learning systems, so we can explain,
+<p>It is crucial for humans to understand the algorithms
+discovered by machine-learning systems so we can explain,
 design, and control their behavior in new domains.
 <p>Artificial intelligence should create transparency in a complex world.
 As our sophisticated systems exhibit more unexpected and emergent
 behavior, I believe the focus of machine learning should shift to
 <em>machine explanation</em>: the development of methods that reveal
-the patterns and strategies our algorithms have found, so that
+the patterns and strategies our algorithms find, so that
 both programmers and users can retain agency.
 </p>
 <p>As a PhD student in <a href="http://web.mit.edu/torralba/www/"
@@ -202,9 +202,9 @@ The focus of my research at MIT is therefore to
 find ways to enhance and exploit this structure
 to make deep networks more transparent.</p>
 <p>I also have a long interest on the wider problem of making all
-computer systems more transparent and programmable. I develop
-novice programming interfaces, open standards, tools
-and libraries that make complex systems easier to understand.
+computer systems more programmable. I develop programming
+interfaces, open standards, tools and libraries that make complex
+systems easier to understand.
 </div> <!-- prologue -->
 </div>
 </div>
